- Updated reference version of Java to 16 (in documentation and in NetBeans project). - Updated code to reflect new Java conventions and deprecated practices. - Updated lisencing year to 2021 (in documentation and code).